<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:layoutDirection="ltr"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/text_view"
            android:paddingStart="30dp"
            android:text="@string/what_type_of_coffe"
            android:textColor="#FBFBFB"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="249dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="373dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layoutDirection="ltr"
                android:paddingStart="5dp"
                android:text="@string/decafe"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textDirection="ltr"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="373dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                android:paddingStart="5dp"
                android:text="@string/expresso"
                android:textAlignment="textStart"
                android:textColor="#F6F6F6"
                android:textDirection="ltr"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="373dp"
                android:layout_height="82dp"
                android:layout_marginStart="20dp"
                android:layoutDirection="ltr"
                android:paddingStart="5dp"
                android:text="@string/colombien"
                android:textAlignment="textStart"
                android:textColor="#F8F5F5"
                android:textDirection="ltr"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry,VisualLintButtonSize" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="405dp"
        android:layout_height="235dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.252">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@drawable/text_view"
            android:paddingStart="50dp"
            android:text="@string/what_else_in_your_coffee"
            android:textColor="#F3F1F1"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <CheckBox
            android:id="@+id/chcream"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginStart="40dp"
            android:paddingStart="5dp"
            android:text="@string/cream"
            android:textColor="#F8F5F5"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,VisualLintButtonSize" />

        <CheckBox
            android:id="@+id/chsugar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="40dp"
            android:paddingStart="20dp"
            android:text="@string/sugar"
            android:textColor="#F4F4F4"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry,VisualLintButtonSize" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="56dp"
        android:background="@drawable/button"
        android:text="@string/pay"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.133" />
</androidx.constraintlayout.widget.ConstraintLayout>